[tool.poetry]
name = "lightfirst"
version = "0.1.0"
description = "Querying tool for photometry data"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
skypatrol = "^0.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
